Fixed this fucking naming convention bug thing. FUCK PYTHON. Pls dont actually. Thats animal abuse. I am allowed to swear. Daniel approved this message
