# BackEnd/swagger_server/models/__init__.py
@@ -5,7 +5,6 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.api_response import ApiResponse
 from swagger_server.models.auth_key import AuthKey
-from swagger_server.models.login_user import LoginUser
 from swagger_server.models.portfolio_position import PortfolioPosition
 from swagger_server.models.portfolio_value import PortfolioValue
 from swagger_server.models.settings import Settings
@@ -15,3 +14,4 @@ from swagger_server.models.stock_value import StockValue
 from swagger_server.models.transaction import Transaction
 from swagger_server.models.transaction_prepare import TransactionPrepare
 from swagger_server.models.user import User
+from swagger_server.models.user_prepare_login import UserPrepareLogin
