# BackEnd/swagger_server/models/user_prepare_login.py
@@ -9,18 +9,18 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class LoginUser(Model):
+class UserPrepareLogin(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, email: str=None, password: str=None):  # noqa: E501
-        """LoginUser - a model defined in Swagger
+        """UserPrepareLogin - a model defined in Swagger
 
-        :param email: The email of this LoginUser.  # noqa: E501
+        :param email: The email of this UserPrepareLogin.  # noqa: E501
         :type email: str
-        :param password: The password of this LoginUser.  # noqa: E501
+        :param password: The password of this UserPrepareLogin.  # noqa: E501
         :type password: str
         """
         self.swagger_types = {
@@ -37,32 +37,32 @@ class LoginUser(Model):
         self._password = password
 
     @classmethod
-    def from_dict(cls, dikt) -> 'LoginUser':
+    def from_dict(cls, dikt) -> 'UserPrepareLogin':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The LoginUser of this LoginUser.  # noqa: E501
-        :rtype: LoginUser
+        :return: The UserPrepareLogin of this UserPrepareLogin.  # noqa: E501
+        :rtype: UserPrepareLogin
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def email(self) -> str:
-        """Gets the email of this LoginUser.
+        """Gets the email of this UserPrepareLogin.
 
 
-        :return: The email of this LoginUser.
+        :return: The email of this UserPrepareLogin.
         :rtype: str
         """
         return self._email
 
     @email.setter
     def email(self, email: str):
-        """Sets the email of this LoginUser.
+        """Sets the email of this UserPrepareLogin.
 
 
-        :param email: The email of this LoginUser.
+        :param email: The email of this UserPrepareLogin.
         :type email: str
         """
 
@@ -70,20 +70,20 @@ class LoginUser(Model):
 
     @property
     def password(self) -> str:
-        """Gets the password of this LoginUser.
+        """Gets the password of this UserPrepareLogin.
 
 
-        :return: The password of this LoginUser.
+        :return: The password of this UserPrepareLogin.
         :rtype: str
         """
         return self._password
 
     @password.setter
     def password(self, password: str):
-        """Sets the password of this LoginUser.
+        """Sets the password of this UserPrepareLogin.
 
 
-        :param password: The password of this LoginUser.
+        :param password: The password of this UserPrepareLogin.
         :type password: str
         """
 
